# ashlr-pulse

./: .gitignore  .phantom.toml  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  COMPETITIVE.md  DEPLOY.md  PERSONAS.md  QUICKSTART.md  README.md  ROADMAP.md  ashlr.verify.json  docker-compose.yml  railway.json
.cursor/rules/: pulse.mdc
.github/workflows/: ci.yml  release-agent.yml
agent/: CHANGELOG.md  Cargo.toml  README.md  install.sh
agent/scripts/: pulse-hook.bash  pulse-hook.zsh
agent/src/: auth.rs  backfill.rs  claude.rs  codex.rs  config.rs  git.rs  heartbeat.rs  invite.rs  lib.rs  main.rs  onboard.rs  orchestrator.rs  otlp.rs  repo_discover.rs  service_install.rs  shell.rs  shell_install.rs  span.rs  state.rs
agent/tests/: codex_integration.rs  git_info.rs  git_poller.rs  heartbeat.rs  orchestrator.rs  parsing.rs  service_install.rs  shell_install.rs  shell_validation.rs  span_builder.rs  state.rs
db/migrations/: 0001_activity_event.sql  0002_peer_share_and_project.sql  0003_pat_and_tokens_saved.sql  0004_github_integration.sql  0006_user_digest_prefs.sql  0007_otlp_idempotency.sql  0008_perf_indexes.sql  0009_agent_onboard.sql  0010_agent_heartbeat.sql  0011_invite.sql  0012_cache_breakdown.sql  0013_dashboard_briefing.sql  0014_cron_runs.sql  0014_org_plan_billing.sql  0015_accuracy_and_dedup.sql  0015_intent_notes.sql  0016_dashboard_views.sql  0016_org_plan_billing.sql  (+28 more)
research/: ai-usage-data.md  example-span.json  landscape.md  oss-foundations.md
server/: .dockerignore  .env.example  .phantom.toml  Dockerfile  next.config.ts  package.json
(+350 files in other folders)
